2007-09-30  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/data/images/application-x-executable.png,
	  www.gnome.org/projects/cheese/data/images/dialog-information.png,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-assistive-technology.png,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html: 
	  bug removal and a bit fancy up on the cheese page

2007-09-29  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am: 
	  news entry: new website for cheese

2007-09-29  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-wallpaper.png,
	  www.gnome.org/projects/cheese/data/images/internet-group-chat.png,
	  www.gnome.org/projects/cheese/data/images/system-users.png,
	  www.gnome.org/projects/cheese/data/images/video-x-generic.png,
	  www.gnome.org/projects/cheese/data/images/applications-development.png,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-assistive-technology.png,
	  www.gnome.org/projects/cheese/data/images/package-x-generic.png,
	  www.gnome.org/projects/cheese/data/themes/cheese,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/index.html:
	  new website for cheese

2007-09-28  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/svn.shtml:
	Update for stable 2.12.x branch.

2007-09-28  Matthew Barnes  <mbarnes@redhat.com>
