@@ -45,7 +45,7 @@
             <h2>What is Cheese?</h2>
 
             <p>
-            Cheese is a GNOME application designed taking photos and videos of you
+            Cheese is a GNOME application designed to take photos and videos of you
             and your friends with your webcam, add special effects to them and share
             them with your friends and family.
             It was written as part of Google's 2007 Summer of Code lead by
