@@ -47,38 +47,38 @@
 
           <h2>Screenshots for 0.2.2, 0.2.3, 0.2.4</h2>
           <a href="data/screenshots/cheese-0.2.2.jpg">
-            <img src="data/screenshots/cheese-0.2.2.jpg" alt="cheese-0.2.2.jpg" width="48%" />
-          </a>
-          <h2>Screenshots for 0.2.1</h2>
-          <a href="data/screenshots/cheese-0.2.1.jpg">
-            <img src="data/screenshots/cheese-0.2.1.jpg" alt="cheese-0.2.1.jpg" width="48%" />
+            <img src="data/screenshots/cheese-0.2.2.jpg" alt="cheese-0.2.2.jpg" height="300px" />
           </a>
           <h2>Screenshots for 0.1.4</h2>
           <a href="data/screenshots/cheese-0.1.4.jpg">
-            <img src="data/screenshots/cheese-0.1.4.jpg" alt="cheese-0.1.4.jpg" width="48%" />
+            <img src="data/screenshots/cheese-0.1.4.jpg" alt="cheese-0.1.4.jpg" height="300px" />
           </a>
-          <h2>Screenshots for 0.1.2, 0.1.3</h2>
-          <a href="data/screenshots/cheese-0.1.2.jpg">
-            <img src="data/screenshots/cheese-0.1.2.jpg" alt="cheese-0.1.2.jpg" width="48%" />
+          <h2>Screenshots for 0.1.1</h2>
+          <a href="data/screenshots/cheese-0.1.1.jpg">
+            <img src="data/screenshots/cheese-0.1.1.jpg" alt="cheese-0.1.1.jpg" height="300px" />
+          </a>
+          <a href="data/screenshots/cheese-0.1.1_2.jpg">
+            <img src="data/screenshots/cheese-0.1.1_2.jpg" alt="cheese-0.1.1_2.jpg" height="300px" />
+          </a>
+          <h2>Screenshots for pre 0.1.0</h2>
+          <a href="data/screenshots/cheese-pre0.1.0.jpg">
+            <img src="data/screenshots/cheese-pre0.1.0.jpg" alt="cheese-pre0.1.0.jpg" height="300px" />
           </a>
 
         </div>
         <div id="right">
 
-          <h2>Screenshots for 0.1.1</h2>
-          <a href="data/screenshots/cheese-0.1.1.jpg">
-            <img src="data/screenshots/cheese-0.1.1.jpg" alt="cheese-0.1.1.jpg" width="48%" />
+          <h2>Screenshots for 0.2.1</h2>
+          <a href="data/screenshots/cheese-0.2.1.jpg">
+            <img src="data/screenshots/cheese-0.2.1.jpg" alt="cheese-0.2.1.jpg" height="300px" />
           </a>
-          <a href="data/screenshots/cheese-0.1.1_2.jpg">
-            <img src="data/screenshots/cheese-0.1.1_2.jpg" alt="cheese-0.1.1_2.jpg" width="48%" />
+          <h2>Screenshots for 0.1.2, 0.1.3</h2>
+          <a href="data/screenshots/cheese-0.1.2.jpg">
+            <img src="data/screenshots/cheese-0.1.2.jpg" alt="cheese-0.1.2.jpg" height="300px" />
           </a>
           <h2>Screenshots for 0.1.0</h2>
           <a href="data/screenshots/cheese-0.1.0.jpg">
-            <img src="data/screenshots/cheese-0.1.0.jpg" alt="cheese-0.1.0.jpg" width="48%" />
-          </a>
-          <h2>Screenshots for pre 0.1.0</h2>
-          <a href="data/screenshots/cheese-pre0.1.0.jpg">
-            <img src="data/screenshots/cheese-pre0.1.0.jpg" alt="cheese-pre0.1.0.jpg" width="48%" />
+            <img src="data/screenshots/cheese-0.1.0.jpg" alt="cheese-0.1.0.jpg" height="300px" />
           </a>
         </div>
 
