@@ -1,6 +1,13 @@
 2007-09-30  daniel g. siegel  <dgsiegel@gmail.com>
 
 	* ChangeLog,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/screenshots.html: 
+	  fix some bugs in the cheese page
+
+2007-09-30  daniel g. siegel  <dgsiegel@gmail.com>
+
+	* ChangeLog,
 	  www.gnome.org/projects/cheese/data/images/application-x-executable.png,
 	  www.gnome.org/projects/cheese/data/images/dialog-information.png,
 	  www.gnome.org/projects/cheese/data/images/preferences-desktop-assistive-technology.png,
